--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,8 @@
     "mongoose": "^8.5.4",
     "next": "14.2.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "ui": "github:shadcn/ui"
   },
   "devDependencies": {
     "eslint": "^8",
